tests/scripts/errors/lex/unterminated_block_comment.cdo
VAR x = 1;
/* this comment never closes
print(x);
